add anonymous class